[acnh] Prevent icons from being highlighted when tapped on mobile

--- a/animal_crossing/style.css
+++ b/animal_crossing/style.css
@@ -298,6 +298,13 @@ body {
   border-radius: 22px;
   box-shadow: 1px 2px 1px #864018;
   margin: 5px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .icon:hover {
